# effective-git-messages

./: LICENSE  README.md  generative.py  generative_mr.py  pyproject.toml
